pyfll-installer (001-1) unstable; urgency=low

  * trivial/ unuseable packaging, inject, actual development starts when it's
    online
  * worked on tableWidget, partition name, fstype added 
  * uuid to tableWidget added 
  * bug-fix in libparse-debcontrol-perl 
  * bug in pyqt4, no icon and text in buttons and labels. icons removed 
  * tableWidget shows the text now 
  * cd '/home/hjt/fll/pyfll-installer/trunk'
  * timzone file and supported filesystem changed to pyfll-installer.conf
  * mountpoint to tableWidget added 
  * if partition is extended do noting 
  * Requires root message 
  * moved ui = ... to main, don't use it in init (SEGFAULT) 
  * self codes added to translations.py

 -- Horst Tritremmel <hjt@sidux.com>  Tue, 22 Apr 2008 14:49:26 +0200