@@ -2,11 +2,11 @@ Source: pyfll-installer
 Section: unknown
 Priority: extra
 Maintainer: Horst Tritremmel <hjt@sidux.com>
-Build-Depends: cdbs, debhelper (>= 5)
+Build-Depends: cdbs, debhelper (>= 5), pyqt4-dev-tools
 Standards-Version: 3.7.2
 
 Package: pyfll-installer
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}
+Depends: ${shlibs:Depends}, ${misc:Depends}, python, python-qt4
 Description: pyfll-installer test
  this is only a developer test
